# feishu-ai-nav

./: .env.example  .gitignore  CLAUDE.md  PLAN.md  README.md  UPDATE.md  deploy.sh  docker-compose.yml  nginx.conf
.claude/: ralph-loop.local.md
backend/: Dockerfile  migrate.py  pyproject.toml  requirements.txt  seed.py
backend/app/: __init__.py  config.py  database.py  main.py
backend/app/api/: __init__.py  admin.py  admin_auth.py  auth.py  categories.py  feedback.py  feishu.py  interactions.py  report_push.py  tags.py  tools.py
backend/app/models/: __init__.py  admin_user.py  category.py  click_log.py  feedback.py  report_push.py  search_history.py  statistics.py  tag.py  tool.py  user.py  user_interaction.py
backend/app/schemas/: __init__.py  category.py  feedback.py  interaction.py  stats.py  tag.py  tool.py  user.py
backend/app/services/: __init__.py  click_service.py  export_service.py  feishu_service.py  import_service.py  push_service.py  stats_service.py
backend/app/tasks/: report_task.py  scheduler.py
backend/scripts/: create_admin.py
bot-pilot/: .env.example  Dockerfile  README.md  pyproject.toml
bot-pilot/app/: __init__.py  config.py  main.py
bot-pilot/app/api/: callback.py  health.py
bot-pilot/app/cards/: __init__.py  builder.py
bot-pilot/app/core/: event_handler.py  message_handler.py
bot-pilot/app/llm/: chat_service.py  mcp_tools.py  prompt_manager.py  tool_executor.py
bot-pilot/app/services/: database.py  feishu_client.py  stats_bridge.py
frontend/: .env.development  .env.production  Dockerfile  index.html  nginx.conf  (+2 more)
(+30 files in other folders)
