[project]
name = "bot-pilot"
version = "0.1.0"
description = "飞书 AI 导航机器人服务 - 导航领航员"
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
    # Web 框架
    "fastapi>=0.109.0",
    "uvicorn[standard]>=0.27.0",

    # 飞书 SDK
    "lark-oapi>=1.3.0",

    # OpenAI
    "openai>=1.12.0",

    # 数据库
    "sqlalchemy>=2.0.25",
    "asyncpg>=0.31.0",
    "aiosqlite>=0.20.0",

    # 配置管理
    "pydantic-settings>=2.1.0",

    # HTTP 客户端
    "httpx>=0.26.0",

    # 工具
    "python-dotenv>=1.0.0",
    "loguru>=0.7.2",
]

[project.optional-dependencies]
dev = [
    "pytest>=8.0.0",
    "pytest-asyncio>=0.23.0",
    "ruff>=0.2.0",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["app"]

[tool.ruff]
line-length = 100
target-version = "py311"

[tool.ruff.lint]
select = ["E", "F", "I", "W"]
ignore = ["E501"]
